add education & check tab key

--- a/project1/resume.html
+++ b/project1/resume.html
@@ -11,17 +11,33 @@
 				<li>
 					<a href="mailto:dlee57@hawk.iit.edu">Contact me</a>
 				</li>
-			<h2>Index</h2>
-				<li>
-					<a href="resume.html">resume</a>
-				</li>
-				<li>
-					<a href="algorithm.html">algorithm</a>
-				</li>
 			</ul>
+			<h2>Index</h2>
+				<ul>
+					<li>
+						<a href="resume.html">resume</a>
+					</li>
+					<li>
+						<a href="algorithm.html">algorithm</a>
+					</li>
+				</ul>
 		</header>
-			<h2>Education</h2>
-			<h2>Skills</h2>
+			<ul>
+				<li>
+					<h2>Education</h2>
+					<h3>Illinois Institute of Technology</h3>
+						<ul>
+						<li>Feb 2017</li>
+						<li>International Student</li>
+						</ul>
+					<h3>Chungbuk National University</h3>
+						<ul>
+						<li>Aug 2017</li>
+						<li>Information Telecommunication Engineering</li>
+				</li>
+				<li>
+					<h2>Skills</h2>
+				</li>
 		<footer>
 		</footer>
 	</body>	
