education iit info change

--- a/project1/resume.html
+++ b/project1/resume.html
@@ -27,8 +27,8 @@
 					<h2>Education</h2>
 					<h3>Illinois Institute of Technology</h3>
 						<ul>
-						<li>Feb 2017</li>
-						<li>International Student</li>
+						<li>Aug 2016 ~ Feb 2017</li>
+						<li>Certificate in IT</li>
 						</ul>
 					<h3>Chungbuk National University</h3>
 						<ul>
