Contact me change to email address

--- a/project1/resume.html
+++ b/project1/resume.html
@@ -9,7 +9,7 @@
       <h1>DaYe Lee</h1>
         <ul>
         <li>
-          <a href="mailto:dlee57@hawk.iit.edu">Contact me</a>
+          <a href="mailto:dlee57@hawk.iit.edu">dlee57@hawk.iit.edu</a>
         </li>
         </ul>
       <h2>Index</h2>
