All dir makes index.html

--- a/project1/index.html
+++ b/project1/index.html
@@ -15,10 +15,10 @@
       <h2>Index</h2>
         <ul>
         <li>
-          <a href="resume.html">resume</a>
+          <a href="/resume/">resume</a>
         </li>
         <li>
-          <a href="algorithm.html">algorithm</a>
+          <a href="/algorithm">algorithm</a>
         </li>
         </ul>
     </header>
