resume/index.html add main, article

--- a/project1/resume/index.html
+++ b/project1/resume/index.html
@@ -22,33 +22,37 @@
         </li>
         </ul>
     </header>
-      <ul>
-      <li>
-        <h2>Education</h2>
-          <ul>
-          <li>
-            <h3>Illinois Institute of Technology</h3>
-              <ul>
-              <li>Aug 2016 ~ Feb 2017</li>
-              <li>Certificate in IT</li>
-              </ul>
-          </li>
-          <li>
-            <h3>Chungbuk National University</h3>
-              <ul>
-              <li>Aug 2017</li>
-              <li>Information Telecommunication Engineering</li>
-              </ul>
-          </li>
-          </ul>
-      </li>
-      <li>
-        <h2>Skills</h2>
-          <ul>
-          <li>C</li>
-          </ul>
-      </li>
-      </ul>
+    <main>
+      <article>
+        <ul>
+        <li>
+          <h2>Education</h2>
+            <ul>
+            <li>
+              <h3>Illinois Institute of Technology</h3>
+                <ul>
+                <li>Aug 2016 ~ Feb 2017</li>
+                <li>Certificate in IT</li>
+                </ul>
+            </li>
+            <li>
+              <h3>Chungbuk National University</h3>
+                <ul>
+                <li>Aug 2017</li>
+                <li>Information Telecommunication Engineering</li>
+                </ul>
+            </li>
+            </ul>
+        </li>
+        <li>
+          <h2>Skills</h2>
+            <ul>
+            <li>C</li>
+            </ul>
+        </li>
+        </ul>
+      </article>
+    </main>
     <footer>
     </footer>
   </body>	
