index.html add h-card

--- a/project1/index.html
+++ b/project1/index.html
@@ -5,22 +5,31 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <header id="header">
-      <h1>DaYe Lee</h1>
-        <ul>
+    <header class="h-card" id="header">
+      <h1 class="p-name">DaYe Lee</h1>
+      <ul class="p-adr h-adr">
+        <li class="p-street-address">3241 S Wabash Ave</li>
         <li>
-          <a href="mailto:dlee57@hawk.iit.edu">dlee57@hawk.iit.edu</a>
+          <b class="p-locality">Chicago</b>, <b class="p-region">IL</b>
+          <b class="p-postal-code">60616</b>
         </li>
-        </ul>
+      </ul>
+      <ul class="electronic">
+        <li>
+          <a class="u-mail" href="mailto:dlee57@hawk.iit.edu">dlee57@hawk.iit.edu</a>
+        </li>
+      </ul>
       <h2>Index</h2>
+      <nav>
         <ul>
-        <li>
-          <a href="/resume/">resume</a>
-        </li>
-        <li>
-          <a href="/algorithm">algorithm</a>
-        </li>
+          <li>
+            <a href="/resume/">resume</a>
+          </li>
+          <li>
+            <a href="/algorithm">algorithm</a>
+          </li>
         </ul>
+      </nav>
     </header>
     <footer>
     </footer>
