--- a/project1/index.html
+++ b/project1/index.html
@@ -23,6 +23,9 @@
       <nav>
         <ul>
           <li>
+            <a href="/">home</a>
+          </li>
+          <li>
             <a href="/resume/">resume</a>
           </li>
           <li>
