resume/index.html add section

--- a/project1/resume/index.html
+++ b/project1/resume/index.html
@@ -1,56 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>First Project</title>
+    <title>Resume</title>
     <meta charset="utf-8" />
   </head>
   <body>
-    <header id="header">
-      <h1>DaYe Lee</h1>
-        <ul>
+    <header class="h-card" id="resume-header">
+      <h1 class="p-name">DaYe Lee</h1>
+      <ul class="p-adr h-adr">
+        <li class="p-street-address">3241 S Wabash Ave</li>
         <li>
-          <a href="mailto:dlee57@hawk.iit.edu">dlee57@hawk.iit.edu</a>
+          <b class="p-locality">Chicago</b>, <b class="p-region">IL</b>
+          <b class="p-postal-code">60616</b>
         </li>
-        </ul>
+      </ul>
+      <ul class="electronic">
+        <li>
+          <a class="u-mail" href="mailto:dlee57@hawk.iit.edu">dlee57@hawk.iit.edu</a>
+        </li>
+      </ul>
       <h2>Index</h2>
+      <nav>
         <ul>
-        <li>
-          <a href="/resume">resume</a>
-        </li>
-        <li>
-          <a href="/algorithm">algorithm</a>
-        </li>
+          <li>
+            <a href="/">home</a>
+          </li>
+          <li>
+            <a href="/resume/">resume</a>
+          </li>
+          <li>
+            <a href="/algorithm">algorithm</a>
+          </li>
         </ul>
+      </nav>
     </header>
     <main>
       <article>
-        <ul>
-        <li>
+        <section class="education">
           <h2>Education</h2>
-            <ul>
-            <li>
-              <h3>Illinois Institute of Technology</h3>
+          <ul>
+            <li class="school">Illinois Institute of Technology, Chicago, IL</li>
+              <ul>
+                <li class="degree-date">Anticipated: Feb 2017</li>
+                <li class="degree">Certificate in IT</li>
+                <li class="coursework">Coursework: Fundamentals of Web Development, Project Management for ITM, Linux+ Certigicaion Training</li>
+              </ul>
+            </li>
+            <li class="school">Chungbuk National University, Cheongju, Korea</h3>
                 <ul>
-                <li>Aug 2016 ~ Feb 2017</li>
-                <li>Certificate in IT</li>
+                  <li class="degree-date">Anticipated: Aug 2017</li>
+                  <li class="degree">Information Telecommunication Engineering</li>
+                  <li class="cousework">Coursework: C Programing,</li>
                 </ul>
             </li>
-            <li>
-              <h3>Chungbuk National University</h3>
-                <ul>
-                <li>Aug 2017</li>
-                <li>Information Telecommunication Engineering</li>
-                </ul>
-            </li>
-            </ul>
-        </li>
-        <li>
+          </ul>
+        </section>
+        <section class="experience">
+        </section>
+        <section class="skills">
           <h2>Skills</h2>
-            <ul>
-            <li>C</li>
-            </ul>
-        </li>
-        </ul>
+          <ul>
+            <li class="major">C</li>
+          </ul>
+        </section>
+        <section class="activities/scholarships">
+        </section>
       </article>
     </main>
     <footer>
