resume/index.html htmllint error:line66 dash change

--- a/project1/resume/index.html
+++ b/project1/resume/index.html
@@ -63,7 +63,7 @@
             <li class="major">C</li>
           </ul>
         </section>
-        <section class="activities/scholarships">
+        <section class="activities-scholarships">
         </section>
       </article>
     </main>
