resume/index.html error validate:article no have heading : delete article

--- a/project1/resume/index.html
+++ b/project1/resume/index.html
@@ -35,37 +35,37 @@
       </nav>
     </header>
     <main>
-      <article>
-        <section class="education">
-          <h2>Education</h2>
-          <ul>
-            <li class="school">Illinois Institute of Technology, Chicago, IL</li>
-              <ul>
-                <li class="degree-date">Anticipated: Feb 2017</li>
-                <li class="degree">Certificate in IT</li>
-                <li class="coursework">Coursework: Fundamentals of Web Development, Project Management for ITM, Linux+ Certigicaion Training</li>
-              </ul>
-            </li>
-            <li class="school">Chungbuk National University, Cheongju, Korea</h3>
-                <ul>
-                  <li class="degree-date">Anticipated: Aug 2017</li>
-                  <li class="degree">Information Telecommunication Engineering</li>
-                  <li class="cousework">Coursework: C Programing,</li>
-                </ul>
-            </li>
-          </ul>
-        </section>
-        <section class="experience">
-        </section>
-        <section class="skills">
-          <h2>Skills</h2>
-          <ul>
-            <li class="major">C</li>
-          </ul>
-        </section>
-        <section class="activities-scholarships">
-        </section>
-      </article>
+      <section class="education">
+        <h2>Education</h2>
+        <ul>
+          <li class="school">Illinois Institute of Technology, Chicago, IL
+            <ul>
+              <li class="degree-date">Anticipated: Feb 2017</li>
+              <li class="degree">Certificate in IT</li>
+              <li class="coursework">Coursework: Fundamentals of Web Development, Project Management for ITM, Linux+ Certigicaion Training</li>
+            </ul>
+          </li>
+          <li class="school">Chungbuk National University, Cheongju, Korea
+            <ul>
+              <li class="degree-date">Anticipated: Aug 2017</li>
+              <li class="degree">Information Telecommunication Engineering</li>
+              <li class="cousework">Coursework: C Programing,</li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section class="experience">
+        <h2>Experience</h2>
+      </section>
+      <section class="skills">
+        <h2>Skills</h2>
+        <ul>
+          <li class="major">C</li>
+        </ul>
+      </section>
+      <section class="activities-scholarships">
+        <h2>Activities/Scholarships</h2>
+      </section>
     </main>
     <footer>
     </footer>
