Remove <h2>Index</h2> & change navigation items like prof.Stolley saying

--- a/project1/index.html
+++ b/project1/index.html
@@ -19,17 +19,16 @@
           <a class="u-mail" href="mailto:dlee57@hawk.iit.edu">dlee57@hawk.iit.edu</a>
         </li>
       </ul>
-      <h2>Index</h2>
       <nav>
         <ul>
           <li>
-            <a href="/">home</a>
+            <a href="/">Home</a>
           </li>
           <li>
-            <a href="/resume/">resume</a>
+            <a href="/resume/">Resume</a>
           </li>
           <li>
-            <a href="/algorithm">algorithm</a>
+            <a href="/algorithm/">Algorithm</a>
           </li>
         </ul>
       </nav>
