change spelling about certification

--- a/project1/resume/index.html
+++ b/project1/resume/index.html
@@ -42,7 +42,7 @@
             <ul>
               <li class="degree-date">Anticipated: Feb 2017</li>
               <li class="degree">Certificate in IT</li>
-              <li class="coursework">Coursework: Fundamentals of Web Development, Project Management for ITM, Linux+ Certigicaion Training</li>
+              <li class="coursework">Coursework: Fundamentals of Web Development, Project Management for ITM, Linux+ Certification Training</li>
             </ul>
           </li>
           <li class="school">Chungbuk National University, Cheongju, Korea
