--- a/project1/resume/index.html
+++ b/project1/resume/index.html
@@ -29,7 +29,7 @@
             <a href="/resume/">resume</a>
           </li>
           <li>
-            <a href="/algorithm">algorithm</a>
+            <a href="/algorithm/">algorithm</a>
           </li>
         </ul>
       </nav>
