resume/index.html Experience Add

--- a/project1/resume/index.html
+++ b/project1/resume/index.html
@@ -56,6 +56,40 @@
       </section>
       <section class="experience">
         <h2>Experience</h2>
+        <ul>
+          <li>Samsung Software, Daejoeon, Korea
+          <ul>
+            <li>December 2014 - Present</li>
+            <li>Member
+              <ul>
+                <li>Participated in intensive meeting and discussions regarding Software Programming, Linux and System Programming, and Algorithms</li>
+                <li>Programed network repeater using Raspberry Pi and Drone</li>
+                <li>Programed mini game using Cocos2dx for smartphone</li>
+              </ul>
+            </li>
+          </ul>
+          </li>
+          <li>Samsung Dream Class, Chungbuk, Korea
+          <ul>
+            <li>August 2015 - February 2016</li>
+            <li>Volunteer Tutor
+              <ul>
+              <li>Taught Mathematics to Jusung Middle School students</li>
+              </ul>
+            </li>
+          </ul>
+          </li>
+          <li>Chungbuk National University, Cheongju, Korea
+          <ul>
+            <li>July 2015 - August 2015<li>
+            <li>Internship
+              <ul>
+                <li>Researched and wrote codes to be used for a book on the Analysis of Algorithm Problem Solving</li>
+              </ul>
+            </li>
+          </ul>
+          </li>
+        </ul>
       </section>
       <section class="skills">
         <h2>Skills</h2>
