resume/index.html Skills Add

--- a/project1/resume/index.html
+++ b/project1/resume/index.html
@@ -94,7 +94,10 @@
       <section class="skills">
         <h2>Skills</h2>
         <ul>
-          <li class="major">C</li>
+          <li class="language">Languagues: Korean - Native, English - Intermediate</li>
+          <li class="os">OS: Windows 10, Ubuntu 14.04, Fedora 24, OS X</li>
+          <li class="tool">Tools: Visual Studio 2013, Git, MySQL, Arduino, Microsoft Word, PowerPoint, Excel</li>
+          <li class="certification">Certifications: Linux Master2, Engineer Information Processing</li>
         </ul>
       </section>
       <section class="activities-scholarships">
