resume/index.html Activites-Scholoarships Add

--- a/project1/resume/index.html
+++ b/project1/resume/index.html
@@ -102,6 +102,23 @@
       </section>
       <section class="activities-scholarships">
         <h2>Activities/Scholarships</h2>
+        <ul>
+        <li>Member of Co Club, Chungbuk National University
+          <ul>
+            <li>March 2014 - Present</li>
+          </ul>
+        </li>
+        <li>Member of Redcross Club, Chungbuk National University
+          <ul>
+            <li>March 2014 - Present</li>
+          </ul>
+        </li>
+        <li>Member of Programming Club, Chungbuk National University
+          <ul>
+            <li>March 2014 - August 2015</li>
+          </ul>
+        </li>
+        </ul>
       </section>
     </main>
     <footer>
