resume/index.html footer Add

--- a/project1/resume/index.html
+++ b/project1/resume/index.html
@@ -122,6 +122,7 @@
       </section>
     </main>
     <footer>
+      <p>Copyright &copy; DaYe Web services. All rights reserved.</p>
     </footer>
   </body>	
 </html>
