resume/index.html change capitalization in copyright

--- a/project1/resume/index.html
+++ b/project1/resume/index.html
@@ -122,7 +122,7 @@
       </section>
     </main>
     <footer>
-      <p>Copyright &copy; DaYe Web services. All rights reserved.</p>
+      <p>Copyright &copy; DaYe Web Services. All rights reserved.</p>
     </footer>
   </body>	
 </html>
