--- a/project1/algorithm/index.html
+++ b/project1/algorithm/index.html
@@ -26,6 +26,18 @@
         <h2>Introduction of Algorithm</h2>
         <p>I want to tell you about various Algorithm Skills. I started studying about Solving Algorithm after I participated in Samsung Sowtware Membership which is a software students club. I recommend this order if you are interested in Algorithm and it's your first time.</p>
       </section>
+      <section class="order">
+        <h3>Follow this order for studying who first started</h3>
+          <ol>
+            <li>Mathematics
+              <ol>
+                <li>The remaining operation</li>
+                <li>Euclidean algorithm</li>
+                <li>Prime number</li>
+              </ol>
+            </li>
+          </ol>
+      </section>
     </main>
     <footer>
       <p>Copyright &copy; DaYe Web Services. All rights reserved.</p>
