Stray end tag il, so changed to </li> tag. It makes htmllint error

--- a/project1/resume/index.html
+++ b/project1/resume/index.html
@@ -81,7 +81,7 @@
           </li>
           <li>Chungbuk National University, Cheongju, Korea
           <ul>
-            <li>July 2015 - August 2015<li>
+            <li>July 2015 - August 2015</li>
             <li>Internship
               <ul>
                 <li>Researched and wrote codes to be used for a book on the Analysis of Algorithm Problem Solving</li>
