algorithm/index.html Add order section like math,data structure, dynamic programming, graph

--- a/project1/algorithm/index.html
+++ b/project1/algorithm/index.html
@@ -36,6 +36,27 @@
                 <li>Prime number</li>
               </ol>
             </li>
+            <li>Data Structure
+              <ol>
+                <li>Stack</li>
+                <li>Queue</li>
+                <li>Deque</li>
+              </ol>
+            </li>
+            <li>Dynamic Programming
+              <ol>
+                <li>Optimal Substructure</li>
+                <li>Overlapping subproblem</li>
+              </ol>
+            </li>
+            <li>Graph
+              <ol>
+                <li>Expression of Graph</li>
+                <li>Graph Search</li>
+                <li>Connected Component</li>
+                <li>Topological sorting</li>
+              </ol>
+            </li>
           </ol>
       </section>
     </main>
