--- a/project1/algorithm/index.html
+++ b/project1/algorithm/index.html
@@ -27,7 +27,7 @@
         <p>I want to tell you about various Algorithm Skills. I started studying about Solving Algorithm after I participated in Samsung Sowtware Membership which is a software students club. I recommend this order if you are interested in Algorithm and it's your first time.</p>
       </section>
       <section class="order">
-        <h3>Follow this order for studying who first started</h3>
+        <h3>Follow this order for Beginner</h3>
           <ol>
             <li>Mathematics
               <ol>
@@ -43,10 +43,13 @@
                 <li>Deque</li>
               </ol>
             </li>
-            <li>Dynamic Programming
+            <li>Sorting
               <ol>
-                <li>Optimal Substructure</li>
-                <li>Overlapping subproblem</li>
+                <li>Selection Sort</li>
+                <li>Insertion Sort</li>
+                <li>Bubble Sort</li>
+                <li>Merge Sort</li>
+                <li>Quick Sort</li>
               </ol>
             </li>
             <li>Graph
@@ -58,6 +61,13 @@
               </ol>
             </li>
           </ol>
+      </section>
+      <section class="example">
+        <h3>Examples about Algorithm</h3>
+        <article>
+          <h4>Sorting</h4>
+          
+        </article>
       </section>
     </main>
     <footer>
