algorithm/index.html Changed the Inro. I split it

--- a/project1/algorithm/index.html
+++ b/project1/algorithm/index.html
@@ -24,10 +24,11 @@
     <main>
       <section class="intro">
         <h2>Introduction of Algorithm</h2>
-        <p>I want to tell you about various Algorithm Skills. I started studying about Solving Algorithm after I participated in Samsung Sowtware Membership which is a software students club. I recommend this order if you are interested in Algorithm and it's your first time.</p>
+        <p>I want to talk about Algorithm. I started studying about Solving Algorithm after I participated in Samsung Sowtware Membership which is a software students club.</p>
       </section>
       <section class="order">
         <h3>Follow this order for Beginner</h3>
+        <p>I recommend this order if you are interested in Algorithm.</p>
           <ol>
             <li>Mathematics
               <ol>
