algorithm/index.html Changed section example to notice

--- a/project1/algorithm/index.html
+++ b/project1/algorithm/index.html
@@ -63,10 +63,10 @@
             </li>
           </ol>
       </section>
-      <section class="example">
-        <h3>Examples about Algorithm</h3>
+      <section class="notice">
+        <h3>Notice Algorithm Competition</h3>
         <article>
-          <h4>Sorting</h4>
+          <h4>ACM-ICPC</h4>
           
         </article>
       </section>
