algorithm/index.html Input the image

--- a/project1/algorithm/index.html
+++ b/project1/algorithm/index.html
@@ -67,7 +67,12 @@
         <h3>Notice Algorithm Competition</h3>
         <article>
           <h4>ACM-ICPC</h4>
-          
+          <figure>
+            <img src="/img/acm-icpc.jpeg" alt="Photo of ACM-ICPC poster" />
+            <figcaption>
+              <p>It's a poster of ACM-ICPC which is a big competition about Algorithm.</p>
+            </figcaption>
+          </figure>
         </article>
       </section>
     </main>
