--- a/project1/algorithm/index.html
+++ b/project1/algorithm/index.html
@@ -3,6 +3,7 @@
   <head>
   <title>Algorithm</title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,inital-scale=1.0, shrink-to-fit=no" />
   </head>
   <body>
     <header class="h-card" id="algorithm-header">
