--- a/project1/algorithm/index.html
+++ b/project1/algorithm/index.html
@@ -19,6 +19,9 @@
           <li>
             <a href="/algorithm/">algorithm</a>
           </li>
+          <li>
+            <a href="/about/">About</a>
+          </li>
         </ul>
       </nav>
     </header>
