resume/index.html Add about page

--- a/project1/resume/index.html
+++ b/project1/resume/index.html
@@ -31,6 +31,9 @@
           <li>
             <a href="/algorithm/">algorithm</a>
           </li>
+          <li>
+            <a href="/about/">About</a>
+          </li>
         </ul>
       </nav>
     </header>
