index.html Add footer content

--- a/project1/index.html
+++ b/project1/index.html
@@ -37,6 +37,7 @@
       </nav>
     </header>
     <footer>
+      <p>Copyright &copy; DaYe Web Services. All rights reserved.</p>
     </footer>
   </body>	
 </html>
