--- a/project1/index.html
+++ b/project1/index.html
@@ -36,6 +36,9 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <h2>DaYe's Web Pages</h2>
+    </main>
     <footer>
       <p>Copyright &copy; DaYe Web Services. All rights reserved.</p>
     </footer>
