about/index.html Change nav content first letter to capitalization

--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -11,16 +11,16 @@
       <nav>
         <ul>
           <li>
-            <a href="/">home</a>
+            <a href="/">Home</a>
           </li>
           <li>
-            <a href="/resume/">resume</a>
+            <a href="/resume/">Resume</a>
           </li>
           <li>
-            <a href="/algorithm/">algorithm</a>
+            <a href="/algorithm/">Algorithm</a>
           </li>
           <li>
-            <a href="/about/">about</a>
+            <a href="/about/">About</a>
           </li>
         </ul>
       </nav>
