about/index.html Change <p> tag content line and tab

--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -30,8 +30,12 @@
         <h2>Introduce about hobbies</h2>
         <ul>
           <li>Watching Moives
-            <p>I like watching movies. They show me various new things. And when I was watching movie, I can feel the movie's main character is like myself. That's why I like watching movies.</p>
-            <p>These days I want to see "Fantasic Beasts and Where to Find Them". Following is this movie's Teaser Trailer.</p>
+            <p>
+              I like watching movies. They show me various new things. And when I was watching movie, I can feel the movie's main character is like myself. That's why I like watching movies.
+            </p>
+            <p>
+              These days I want to see "Fantasic Beasts and Where to Find Them". Following is this movie's Teaser Trailer.
+            </p>
           </li>
           <li>Reading fantasy books
           </li>
