about/index.html Add <article> tag

--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -36,6 +36,8 @@
             <p>
               These days I want to see "Fantasic Beasts and Where to Find Them". Following is this movie's Teaser Trailer.
             </p>
+            <article class="movies">
+            </article>
           </li>
           <li>Reading fantasy books
           </li>
