--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -29,7 +29,7 @@
       <section class="hobby">
         <h2>Introduce about hobbies</h2>
         <ul>
-          <li>Watching Moives
+          <li>Watching Movies
             <p>
               I like watching movies. They show me various new things. And when I was watching movie, I can feel the movie's main character is like myself. That's why I like watching movies.
             </p>
