about/index.html Add <article> content as video about fatastic-beasts

--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -37,6 +37,12 @@
               These days I want to see "Fantasic Beasts and Where to Find Them". Following is this movie's Teaser Trailer.
             </p>
             <article class="movies">
+              <h3>Fantastic Beasts and Where to Find Them</h3>
+              <figure class="video">
+                <video controls="controls">
+                  <source src="../video/fatastic-beasts.mp4" type="video/mp4" />
+                </video>
+              </figure>
             </article>
           </li>
           <li>Reading fantasy books
