--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -34,7 +34,7 @@
               I like watching movies. They show me various new things. And when I was watching movie, I can feel the movie's main character is like myself. That's why I like watching movies.
             </p>
             <p>
-              These days I want to see "Fantasic Beasts and Where to Find Them". Following is this movie's Teaser Trailer.
+              These days I want to see "Fantastic Beasts and Where to Find Them". Following is this movie's Teaser Trailer.
             </p>
             <article class="movies">
               <h3>Fantastic Beasts and Where to Find Them</h3>
