about/index.html Add <p> contents about download and change video src

--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -40,7 +40,11 @@
               <h3>Fantastic Beasts and Where to Find Them</h3>
               <figure class="video">
                 <video controls="controls">
-                  <source src="../video/fatastic-beasts.mp4" type="video/mp4" />
+                  <source src="/video/fatastic-beasts.mp4" type="/video/mp4" />
+                  <p>
+                    Download the video in
+                    <a herf="/video/fantastic-beasts.mp4">MPEG</a> format.
+                  </p>
                 </video>
               </figure>
             </article>
