--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -46,6 +46,11 @@
                     <a herf="/video/fantastic-beasts.mp4">MPEG</a> format.
                   </p>
                 </video>
+                <figcaption>
+                  <p>
+                    Fantastic Beasts and Where to Find Them Teaser Trailer. From: youtube.
+                  </p>
+                </figcaption>
               </figure>
             </article>
           </li>
