about/index.html Add content about reading fantasy books

--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -55,6 +55,9 @@
             </article>
           </li>
           <li>Reading fantasy books
+            <p>
+              I like reading fantasy books. Because many fantasy books have a different view of the world. They are really surprising and wonderful. And sometimes they make me think about our life and future.
+            </p>
           </li>
           <li>Listening Musics
           </li>
