about/index.html Add <p> tag and <article> tag in music section

--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -60,6 +60,14 @@
             </p>
           </li>
           <li>Listening Musics
+            <p>
+              I also like listening music. Sometimes when I start study, I listen music. It helps me concentrate. Also, when I stay alone, listening music gives me comfort and relax.
+            </p>
+            <p>
+              I want to introduce about my favorite musician from Korea.
+            </p>
+            <article class="musician">
+            </article>
           </li>
         </ul>
       </section>
