--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -67,6 +67,13 @@
               I want to introduce about my favorite musician from Korea.
             </p>
             <article class="musician">
+              <audio src="/audio/akmu-how-people-move.mp3" type="audio/mpeg" controls="controls">
+              </audio>
+              <figcaption>
+                <p>
+                  Akdong Musician's How People Move. From: youtube.
+                </p>
+              </figcaption>
             </article>
           </li>
         </ul>
