about/index.html Add <p> tag content musician name and <p> tag in <audio> tag add this song is

--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -64,14 +64,14 @@
               I also like listening music. Sometimes when I start study, I listen music. It helps me concentrate. Also, when I stay alone, listening music gives me comfort and relax.
             </p>
             <p>
-              I want to introduce about my favorite musician from Korea.
+              I want to introduce about my favorite musician from Korea. Akdong Musician!!
             </p>
             <article class="musician">
               <audio src="/audio/akmu-how-people-move.mp3" type="audio/mpeg" controls="controls">
               </audio>
               <figcaption>
                 <p>
-                  Akdong Musician's How People Move. From: youtube.
+                  This song is Akdong Musician's How People Move. From: youtube.
                 </p>
               </figcaption>
             </article>
