--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -67,6 +67,7 @@
               I want to introduce about my favorite musician from Korea. Akdong Musician!!
             </p>
             <article class="musician">
+              <h3>Ackdong Musician</h3>
               <audio src="/audio/akmu-how-people-move.mp3" type="audio/mpeg" controls="controls">
               </audio>
               <figcaption>
