about/index.html Add <figure>,<img>, and <figcaption> tag about Akdong Musician img

--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -68,6 +68,14 @@
             </p>
             <article class="musician">
               <h3>Ackdong Musician</h3>
+              <figure>
+                <img src="/img/akdong-photo1.jpg" alt="Photo of Akdong Musician" />
+                <figcaption>
+                  <p>
+                    This is Akdong Musician.
+                  </p>
+                </figcaption>
+              </figure>
               <audio src="/audio/akmu-how-people-move.mp3" type="audio/mpeg" controls="controls">
               </audio>
             </article>
