--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -49,7 +49,7 @@
                   <source src="/video/fantastic-beasts.mp4" type="video/mp4" />
                   <p>
                     Download the video in
-                    <a herf="/video/fantastic-beasts.mp4">MPEG</a> format.
+                    <a href="/video/fantastic-beasts.mp4">MPEG</a> format.
                   </p>
                 </video>
                 <figcaption>
