--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -82,7 +82,8 @@
                   </p>
                 </figcaption>
               </figure>
-              <audio src="/audio/akmu-how-people-move.mp3" type="audio/mpeg" controls="controls">
+              <audio controls="controls">
+                <source src="/audio/akmu-how-people-move.mp3" type="audio/mpeg" />
               </audio>
             </article>
           </li>
