about/index.html Add <footer>tag and Copyright

--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -90,5 +90,10 @@
         </ul>
       </section>
     </main>
+    <footer>
+      <p>
+        Copyright &copy; DaYe Web Services. All rights reserved.
+      </p>
+    </footer>
   </body>
 </html>
