algorithm/index.html Add one more img about algorithm competition

--- a/project1/algorithm/index.html
+++ b/project1/algorithm/index.html
@@ -83,6 +83,15 @@
               <p>It's a poster of ACM-ICPC which is a big competition about Algorithm.</p>
             </figcaption>
           </figure>
+          <figure>
+          <h4>2016 ACM-ICPC North American Qualification Contest</h4>
+            <img src="/img/acm-icpc-north-qualification.png" alt="Photo of ACM-ICPC North American Qualification Contest poster" />
+            <figcation>
+              <p>
+                It's a poster of ACM-ICPC North American Qualification Contest. It is a kind of ACM-ICPC Competition.
+              </p>
+            </figcation>
+          </figure>
         </article>
       </section>
     </main>
