about/index.html Change the position of audio and add figcaption about audio

--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -81,10 +81,15 @@
                     This is Akdong Musician.
                   </p>
                 </figcaption>
+                <audio controls="controls">
+                  <source src="/audio/akmu-how-people-move.mp3" type="audio/mpeg" />
+                </audio>
+                <figcaption>
+                  <p>
+                    This is Akdong Musician's song : How People move. From : youtube.
+                  </p>
+                </figcaption>
               </figure>
-              <audio controls="controls">
-                <source src="/audio/akmu-how-people-move.mp3" type="audio/mpeg" />
-              </audio>
             </article>
           </li>
         </ul>
