algorithm/index.html Change the spelling about figcation to figcaption

--- a/project1/algorithm/index.html
+++ b/project1/algorithm/index.html
@@ -86,11 +86,11 @@
           <figure>
           <h4>2016 ACM-ICPC North American Qualification Contest</h4>
             <img src="/img/north-qualification.png" alt="Photo of ACM-ICPC North American Qualification Contest poster" />
-            <figcation>
+            <figcaption>
               <p>
                 It's a poster of ACM-ICPC North American Qualification Contest. It is a kind of ACM-ICPC Competition.
               </p>
-            </figcation>
+            </figcaption>
           </figure>
         </article>
       </section>
