--- a/project1/resume/index.html
+++ b/project1/resume/index.html
@@ -44,15 +44,22 @@
           <li class="school">Illinois Institute of Technology, Chicago, IL
             <ul>
               <li class="degree-date">Anticipated: Feb 2017</li>
-              <li class="degree">Certificate in IT</li>
+              <li class="degree">Certification in IT</li>
               <li class="coursework">Coursework: Fundamentals of Web Development, Project Management for ITM, Linux+ Certification Training</li>
             </ul>
           </li>
-          <li class="school">Chungbuk National University, Cheongju, Korea
+          <li class="school">Chungbuk National University(CBNU), Cheongju, Korea
             <ul>
               <li class="degree-date">Anticipated: Aug 2017</li>
-              <li class="degree">Information Telecommunication Engineering</li>
-              <li class="cousework">Coursework: C Programing,</li>
+              <li class="degree">Bachelor Degree in Science in Information and Communication Engineering</li>
+              <li class="coursework">Coursework: Fundamental Computer Programming, Applied Computer Programming, Engineering Mathematics I and II, Data Communication Design, Embedded Software, Operationg Systems, Data Structure, Database System Design, Internet Communication Design, Database System Design, Communication Engineering, Digital Communication</li>
+            </ul>
+          </li>
+          <li class="other-center">Creative Economy Innovation Center, Daejeon, Korea
+            <ul>
+              <li class="degree-date">Anticipated: July 2015 - August 2015</li>
+              <li class="degree">Certification in Arduino</li>
+              <li class="coursework">Coursework: Arduino Programming<li>
             </ul>
           </li>
         </ul>
@@ -77,7 +84,7 @@
             <li>August 2015 - February 2016</li>
             <li>Volunteer Tutor
               <ul>
-              <li>Taught Mathematics to Jusung Middle School students</li>
+                <li>Taught Mathematics to Jusung Middle School students</li>
               </ul>
             </li>
           </ul>
@@ -106,19 +113,29 @@
       <section class="activities-scholarships">
         <h2>Activities/Scholarships</h2>
         <ul>
-        <li>Member of Co Club, Chungbuk National University
+        <li>Go Club, Member, CBNU, Cheongju, Korea
           <ul>
             <li>March 2014 - Present</li>
           </ul>
         </li>
-        <li>Member of Redcross Club, Chungbuk National University
+        <li>Red Cross Club, Member, CBNU, Cheongju, Korea
           <ul>
             <li>March 2014 - Present</li>
           </ul>
         </li>
-        <li>Member of Programming Club, Chungbuk National University
+        <li>Programming Club, Member, CBNU, Cheongju, Korea
           <ul>
             <li>March 2014 - August 2015</li>
+          </ul>
+        </li>
+        <li>National Science &amp; Technology Scholarship, Korea
+          <ul>
+            <li>September 2013 - Present</li>
+          </ul>
+        </li>
+        <li>Academic Scholarship, CBNU, Cheongju, Korea
+          <ul>
+            <li>March 2014 - March 2016</li>
           </ul>
         </li>
         </ul>
