about/index.html Change <section> tag to <alticle> tag

--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -32,17 +32,17 @@
       </nav>
     </header>
     <main>
-      <section class="hobby">
+      <article class="hobby">
         <h2>Introduce about hobbies</h2>
-        <ul>
-          <li>Watching Movies
+          <section class="movie">
+          <h3>Watching Movies</h3>
             <p>
               I like watching movies. They show me various new things. And when I was watching movie, I can feel the movie's main character is like myself. That's why I like watching movies.
             </p>
             <p>
               These days I want to see "Fantastic Beasts and Where to Find Them". Following is this movie's Teaser Trailer.
             </p>
-            <article class="movies">
+            <article class="movie-video">
               <h3>Fantastic Beasts and Where to Find Them</h3>
               <figure class="video">
                 <video controls="controls">
@@ -59,13 +59,15 @@
                 </figcaption>
               </figure>
             </article>
-          </li>
-          <li>Reading fantasy books
+          </section>
+          <section class="book">
+          <h3>Reading fantasy books</h3>
             <p>
               I like reading fantasy books. Because many fantasy books have a different view of the world. They are really surprising and wonderful. And sometimes they make me think about our life and future.
             </p>
-          </li>
-          <li>Listening Musics
+          </section>
+          <section class="music">
+          <h3>Listening Musics</h3>
             <p>
               I also like listening music. Sometimes when I start study, I listen music. It helps me concentrate. Also, when I stay alone, listening music gives me comfort and relax.
             </p>
@@ -86,9 +88,8 @@
                   <source src="/audio/akmu-how-people-move.mp3" type="audio/mpeg" />
                 </audio>
             </article>
-          </li>
-        </ul>
-      </section>
+          </section>
+      </article>
     </main>
     <footer>
       <p>
