about/index.html Add id in video figure

--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -44,7 +44,7 @@
               </p>
               <article class="movie-video">
                 <h3>Fantastic Beasts and Where to Find Them</h3>
-                <figure class="video">
+                <figure class="video" id="video-fantastic-beasts">
                   <video controls="controls">
                     <source src="/video/fantastic-beasts.mp4" type="video/mp4" />
                     <p>
