about/index.html Add class and id in img figure

--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -76,7 +76,7 @@
               </p>
               <article class="musician">
                 <h3>Ackdong Musician</h3>
-                <figure>
+                <figure class="img" id="img-akdong">
                   <img src="/img/akdong-photo1.jpg" alt="Photo of Akdong Musician" />
                   <figcaption>
                     <p>
