algorithm/index.html Add figure class and id about acm-icpc

--- a/project1/algorithm/index.html
+++ b/project1/algorithm/index.html
@@ -78,7 +78,7 @@
           <section class="notice">
             <h3>Notice Algorithm Competition</h3>
             <article>
-              <figure>
+              <figure class="photo" id="acm-icpc">
               <h4>ACM-ICPC</h4>
                 <img src="/img/acm-icpc.jpeg" alt="Photo of ACM-ICPC poster" />
                 <figcaption>
