algorithm/index.html Add figure class and id about north-qualification

--- a/project1/algorithm/index.html
+++ b/project1/algorithm/index.html
@@ -85,7 +85,7 @@
                   <p>It's a poster of ACM-ICPC which is a big competition about Algorithm.</p>
                 </figcaption>
               </figure>
-              <figure>
+              <figure class"photo" id="north-qualification">
               <h4>2016 ACM-ICPC North American Qualification Contest</h4>
                 <img src="/img/north-qualification.png" alt="Photo of ACM-ICPC North American Qualification Contest poster" />
                 <figcaption>
