resume/index.html Change <li> tag to </li> in line 66

--- a/project1/resume/index.html
+++ b/project1/resume/index.html
@@ -59,7 +59,7 @@
             <ul>
               <li class="degree-date">Anticipated: July 2015 - August 2015</li>
               <li class="degree">Certification in Arduino</li>
-              <li class="coursework">Coursework: Arduino Programming<li>
+              <li class="coursework">Coursework: Arduino Programming</li>
             </ul>
           </li>
         </ul>
