--- a/project1/about/index.html
+++ b/project1/about/index.html
@@ -87,6 +87,9 @@
                   <audio controls="controls">
                     <source src="/audio/akmu-how-people-move.mp3" type="audio/mpeg" />
                   </audio>
+                  <p>
+                    This song is Akdong Musician's How People move. From: youtube.
+                  </p>
               </article>
           </section>
       </article>
