--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>First Project</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content"width=device-width, initial-scale=1.0, shrink-to-fit=no" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" /> 
   </head>
   <body>
     <header class="h-card" id="header">
