--- a/algorithm/index.html
+++ b/algorithm/index.html
@@ -36,11 +36,15 @@
         <h2>Algorithm</h2>
           <section class="intro">
             <h3>Introduction of Algorithm</h3>
-              <p>I want to talk about Algorithm. I started studying about Solving Algorithm after I participated in Samsung Sowtware Membership which is a software students club.</p>
+              <p>
+                I want to talk about Algorithm. I started studying about Solving Algorithm after I participated in Samsung Sowtware Membership which is a software students club.
+              </p>
           </section>
           <section class="order">
             <h3>Follow this order for Beginner</h3>
-              <p>I recommend this order if you are interested in Algorithm.</p>
+              <p>
+                I recommend this order if you are interested in Algorithm.
+              </p>
               <ol>
                 <li>Mathematics
                   <ol>
@@ -82,7 +86,9 @@
               <h4>ACM-ICPC</h4>
                 <img src="/img/acm-icpc.jpeg" alt="Photo of ACM-ICPC poster" />
                 <figcaption>
-                  <p>It's a poster of ACM-ICPC which is a big competition about Algorithm.</p>
+                  <p>
+                    It's a poster of ACM-ICPC which is a big competition about Algorithm.
+                  </p>
                 </figcaption>
               </figure>
               <figure class="photo" id="north-qualification">
@@ -99,7 +105,9 @@
       </article>
     </main>
     <footer>
-      <p>Copyright &copy; DaYe Web Services. All rights reserved.</p>
+      <p>
+        Copyright &copy; DaYe Web Services. All rights reserved.
+      </p>
     </footer>
   </body>
 </html>
