index.html Insert line break <p> tag

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
       <h2>DaYe's Web Pages</h2>
     </main>
     <footer>
-      <p>Copyright &copy; DaYe Web Services. All rights reserved.</p>
+      <p>
+        Copyright &copy; DaYe Web Services. All rights reserved.
+      </p>
     </footer>
   </body>	
 </html>
